Fixed feature link overflow issue #89
closes #89

--- a/src/components/shared/link/main.module.css
+++ b/src/components/shared/link/main.module.css
@@ -2,6 +2,6 @@
 
 @layer utilities {
   .home-link {
-    @apply inline-block p-0.5 h-32 w-full;
+    @apply block p-0.5 h-32 w-full overflow-hidden;
   }
 }
